# datalogger-client

./: .gitignore  Makefile  README  README.md  components  components-kamstrup  gsoap_2.7.16-const-patch.patch
aeeprom/: .gitignore  configure.ac
aeeprom/src/: Makefile.am  aeeprom.c  aeeprom.h  aeeprom_util.c
armlib/lib/: libconfuse.so.0.0.0  libcrypto.so.0.9.8  libnetcdf.so.3.6.1  libssl.so.0.9.8  libz.so.1.2.3
asocket/: .gitignore  Makefile.am  configure.ac
asocket/src/: Makefile.am  asocket.c  asocket.h  asocket_client.c  asocket_client.h  asocket_priv.h  asocket_server.c  asocket_server.h  asocket_trx.c  asocket_trx.h  asockettest.c
bash-module/: .gitignore  configure.ac
bash-module/src/: Makefile.am  bash-in-module.c  bash-loop-module.c  bash-out-module.c
cmddb/: .gitignore  configure.ac
cmddb/src/: Makefile.am  cmddb.c  cmddb.h  cmddb_desc.c  cmddb_desc.h  cmddb_plan.c  cmddb_plan.h  cmddbutil.c  modcmddb.c
contdaem/: .gitignore  Makefile.am  configure.ac  doxygen.cfg
contdaem/src/: Makefile.am  contdaem.c  contdaem.h  contdaemtest.c  module_base.c  module_base.h  module_event.c  module_event.h  module_tick.c  module_tick.h  module_tick_master.c  module_tick_master.h  module_type.c  module_type.h  module_util.c  module_util.h  module_value.c  module_value.h  type_loader.c  type_loader.h  uni_data.c  uni_data.h
contdaem/src/modules/: Makefile.am  antibounce.c  bitcalc.c  calc.c  calcaccumulate.c  control.c  counter.c  dayplan.c  keyinput.c  ledpanel.c  levelalarm.c  logfile.c  readfile.c  relay.c  sequence.c  sequence_io.c  sequence_io.h  switch.c  sysinf.c  syslog.c  template.c  threshold.c  userread.c  waterpower.c
contdaem/xmlfiles/: abounce.xml  contdaem_example.conf  counter.xml  logfile.xml  moduletest.xml  sgtest.xml  syslog.xml
db-local/: .gitignore  configure.ac
db-module/: configure.ac
en_modules/: .gitignore  configure.ac
endata/: configure.ac
enstyrerapp/: configure.ac
enstyrerapp/src/: Makefile.am  encontrol_simp.c  encontrol_simp.h  enstyrer_simp.c  enstyrerapp.c  enstyrerapp.h  enstyrerapp_test.c  enstyrerapp_test.h  timevar.c  timevar.h
firmwareupdate/: do_update.sh  mkudtimg.sh
flash-chart/: .gitignore  Makefile.am  configure.ac
heatup/: configure.ac
kamcom/: .gitignore  README  configure.ac
kamcom-mod/: .gitignore  configure.ac
libsdvp/: .cproject  .gitignore  .project  Makefile.am  configure.ac
libstrophe/: Makefile.am  configure.ac
libtimeout/: configure.ac
libtimeout/src/: Makefile.am  system_timeout.c  timeout.h
licon/: .gitignore  Makefile.am  configure.ac
licon-mod/: configure.ac
logdb/: .gitignore  configure.ac
lognetcdf/: configure.ac
modbusd/: .gitignore  Makefile.am  configure.ac  modbusclient.c  modbusctrl.c  modbusd.c  modbusutil.c  modmodbus.c  msgpipe.c  msgpipe.h  pidfile.c
netcdf-module/: .gitignore  configure.ac
netcdf-module/src/: Makefile.am  netcdf-module.c  netcdf-module.h
patches/: gplheader-patch
restoremodem/: configure.ac
restoremodem/src/: Makefile.am  restoremodem.c
rpclient/: .gitignore  Makefile.am  configure.ac
rpclient/cert/: cacert.pem
rpclient/gsoap/: Makefile.in
rpclient/remboxglob/: remboxdb_glob.h
rpclient/scripts/: Makefile.am  chconfig.sh
rpclient/src/: Makefile.am  boxcmdq.c  boxcmdq.h  pidfile.c  pidfile.h  rpclient.c  rpclient.h  rpclient_cmd.c  rpclient_cmd.h  rpclient_crypto.c  rpclient_crypto.h  rpclient_db.c  rpclient_db.h  rpclient_glob.h  rpclient_soap.c  rpclient_soap.h  rpclient_stfile.c  rpclient_stfile.h  rpclientutil.c  rpfileutil.c  rpfileutil.h
rpfchart-arm/: configure.ac
rpfchart-arm/src/: Makefile.am  csv_export.c  rpfchart.c  rpfchart.h
sdvpd/: .gitignore  configure.ac  mmsmap.xml
sdvpd/scripts/: Makefile.am  xmppwatchdog.sh
sdvpd/src/: Makefile.am  contdaem_client.c  contdaem_client.h  memwatch.c  memwatch.h  oom_adjust.c  oom_adjust.h  pidfile.c  pidfile.h  sdvpd.c  sdvpd_handler.c  sdvpd_handler.h  sdvpd_item.c  sdvpd_item.h  sdvpd_xml.c  sdvpd_xml.h
sdvpd/xmpp_test/: .cproject  .gitignore  .project  README.md
sdvpd/xmpp_test/src/: define.h  test.c  typedefs.h
socketmod/: .gitignore  configure.ac
socketmod/src/: Makefile.am  contdaemutil.c  contlive.c  contlive.h  socketmod.c  xmlcntn.c  xmlcntn.h  xmlcontdaem.c  xmlcontdaem.h  xmlsckmaster.c  xmlsocket.c
templatemod/: configure.ac
wdt/: Makefile.am  configure.ac
wdt/conf/: Makefile.am  watchdog.conf
wdt/scripts/: Makefile.am  check.sh  repair.sh
webcserver/: Makefile.am  configure.ac
webcserver/html/: Makefile.am  flashchart.swf  index.html  liabzen.css  page.begin.html.in  page.end.html.in  styles.css
webcserver/html/liab/: liabzen.css
webcserver/src/: Makefile.am  calib.c  cmd.c  cmd_json.c  dbfile.c  ethmacget.c  ethmacget.h  export.c  grafer.c  json.c  json.h  live.c  pair.c  relay.c  siteutil.c  siteutil.h
webcserver_js/: .gitignore  Makefile.am  build.xml.in  configure.ac
webcserver_js/src/com/google/gwt/dom/client/: MyDOMImplIE8.java
webcserver_js/src/dk/liab/boxsitehelper/: BoxSiteHelper.gwt.xml
webcserver_js/src/dk/liab/boxsitehelper/client/: BoxSiteHelper.java  DUtils.java  JsonRpcHandler.java  TableEntries.java  TableEntry.java  TableEntryJs.java  TableUpdateJs.java  TableValueJs.java  TableView.java  TableViewEntey.java  ValueSet.java
wirelesstrx-module/: .gitignore  configure.ac
wr-module/: .gitignore  configure.ac
xml_cntn/: .gitignore  Makefile.am  configure.ac
xml_cntn/src/: Makefile.am  xml_cntn.c  xml_cntn.h  xml_cntn_client.c  xml_cntn_client.h  xml_cntn_fd.c  xml_cntn_fd.h  xml_cntn_gen.h  xml_cntn_rcvr.c  xml_cntn_rcvr.h  xml_cntn_server.c  xml_cntn_server.h  xml_cntn_sub.c  xml_cntn_sub.h  xml_cntn_subcl.c  xml_cntn_trx.c  xml_cntn_trx.h  xml_cntn_tx.c  xml_cntn_tx.h
xmlfiles/: README  simplesendeventmod_conf.xml  tempreg_conf.xml
xmlparser/: .gitignore  Makefile.am  configure.ac
xmlparser/src/: Makefile.am  xml_attr.c  xml_attr.h  xml_doc.c  xml_doc.h  xml_item.c  xml_item.h  xml_parser.c  xml_parser.h  xml_serialize.c  xml_serialize.h  xml_stack.c  xml_stack.h  xmltest.c
(+156 files in other folders)
