
#bin_PROGRAMS = ctl-send

#ctl_send_SOURCES 

#plugin_LTLIBRARIES  = bashinmodule.la bashoutmodule.la bashloopmodule.la
plugin_LTLIBRARIES  = bashoutmodule.la

#bashinmodule_la_SOURCES   = bash-in-module.c
bashoutmodule_la_SOURCES  = bash-out-module.c
#bashloopmodule_la_SOURCES = bash-loop-module.c

#AM_CFLAGS = -L../../control-daemon/src -I../../control-daemon/src
AM_LDFLAGS = -module -avoid-version 
#AM_LIBADD  = -lxmlpar -lmodule 