
if SDVP
EXTRAFILE = sdvp/logosdvp.png sdvp/sdvpzen.css
else
EXTRAFILE = liab/logoliab.png liab/liabzen.css
endif



html_DATA = \
    page.begin.html.in \
    page.end.html.in \
    defaults.css \
    index.html \
    system.css \
    tableheader.js \
    flashchart.swf \
    styles.css \
	$(EXTRAFILE)