plugin_LTLIBRARIES = template.la relay.la readfile.la sysinf.la userread.la keyinput.la calcaccumulate.la waterpower.la ledpanel.la threshold.la levelalarm.la dayplan.la calc.la


readfile_la_SOURCES = readfile.c

template_la_SOURCES = template.c

relay_la_SOURCES = relay.c


AM_CFLAGS = -L../ -I../
AM_LDFLAGS = -module -avoid-version 
AM_LIBADD  = -lmodule 
