plugin_LTLIBRARIES = template.la relay.la readfile.la sysinf.la userread.la keyinput.la calcaccumulate.la waterpower.la ledpanel.la  threshold.la control.la levelalarm.la dayplan.la calc.la bitcalc.la sequence.la syslog.la antibounce.la logfile.la counter.la

sequence_la_SOURCES = sequence.c sequence_io.c


readfile_la_SOURCES = readfile.c

template_la_SOURCES = template.c

relay_la_SOURCES = relay.c


AM_CFLAGS = -L../ -I../ -Wall -Werror
AM_LDFLAGS = -module -avoid-version 
AM_LIBADD  = -lmodule 
